solved overlaping images over nav bar when hover

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ nav {
   top: 0;
   background-color: grey;
   overflow: hidden;
+  z-index: 100;
 }
 
 nav ul {
